@@ -2,6 +2,8 @@ CHANGES IN FLTK 1.1.7
 
 	- Documentation fixes (STR #648, STR #692, STR #730, STR
 	  #744, STR #745)
+	- Fl_File_Chooser::value() and ::directory() now handle
+	  paths with backslashes on WIN32 (STR #811)
 	- Added the standard rgb.txt file from X11 to the test
 	  directory, allowing all platforms to try the colbrowser
 	  demo (STR #843)
